--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <p>certemente desinteressante </p>
         <a href="https://x.com/osurinhu">twitter</a>
         <footer>
-            <p style="padding-top: 70%;">desde 2005</p>
+            <p>desde 2005</p>
         </footer>
     </body>
 </html>
